# ArboOCR

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cli/: arboocr_demo.cpp
docs/superpowers/notes/: 2026-07-22-wasm-feasibility.md
docs/superpowers/plans/: 2026-07-22-multilingual-path-overrides.md  2026-07-23-accuracy-improve.md  2026-07-23-clahe-preprocessing.md
docs/superpowers/specs/: 2026-07-22-multilingual-path-overrides-design.md  2026-07-22-python-bindings-design.md  2026-07-23-accuracy-improve-design.md  2026-07-23-clahe-preprocessing-design.md
examples/: README.md  basic_recognize.cpp
include/arboOCR/: classifier.hpp  detector.hpp  engine.hpp  logging.hpp  model_downloader.hpp  ocr_utils.hpp  preprocess.hpp  recognizer.hpp  types.hpp
python/: CMakeLists.txt  README.md
python/arboocr/: __init__.py
python/bindings/: module.cpp
python/tests/: test_smoke.py
src/arboOCR/: classifier.cpp  detector.cpp  engine.cpp  logging.cpp  model_downloader.cpp  ocr_utils.cpp  ort_provider_utils.cpp  ort_provider_utils.hpp  preprocess.cpp  recognizer.cpp  types.cpp
tests/: test_detector.cpp  test_engine.cpp  test_engine_inference.cpp  test_logging.cpp  test_main.cpp  test_model_downloader.cpp  test_ocr_utils.cpp  test_preprocess.cpp  test_recognizer.cpp
